Fix table view alignment

--- a/src/main/resources/css/jfx-table-view.css
+++ b/src/main/resources/css/jfx-table-view.css
@@ -72,8 +72,8 @@
 
 .table-view .table-cell {
     -fx-border-width: 0 0 0 0;
-    -fx-padding: 16 0 16 0;
-    -fx-alignment: top-center;
+    -fx-padding: 16 8 16 8;
+    -fx-alignment: left-center;
 }
 
 .table-view .column-overlay {
